--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -11,7 +11,7 @@
     <div class="card-single">
       <div>
         <h1><%=numOfPost%></h1>
-        <span>Posts</span>
+        <span>Apartments</span>
       </div>
       <div>
         <span class="las la-users"></span>
