--- a/views/components/favoritelist.ejs
+++ b/views/components/favoritelist.ejs
@@ -38,10 +38,7 @@
                 <div class="card mt-3">
                     <div class="row ">
                             <div class="col-md-9 ">
-                                <h5 class="align-middle ml-3 mt-1">Ban co <span class="text-danger">3</span> bds yeu thich</h5>
-                            </div>
-                            <div class="col-md-3 text-right " >
-                                <button class="btn btn-primary mr-2">Xoa het</buttonc>
+                                <h5 class="align-middle ml-3 mt-1">Bạn có <span class="text-danger">3</span> BẤT ĐỘNG SẢN yêu thích</h5>
                             </div>
                     </div>
                 </div>
@@ -50,87 +47,31 @@
                         <div class="col-md-2">
                             <img src="./assets/img/1.jpg" alt="" class="img-thumbnail">
                         </div>
-                        <div class="col-md-8 ">
+                        <div class="col-md-8 mt-3">
                             <h6 >CĂN HỘ 2PN FULL NỘI THẤT XỊN MƯỜNG THANH VIỄN TRIỀU - 1.4 TỶ</h6>
                             <div class="content__inner__card pt-3">
                                 <span class="p-1 border border-secondary rounded ml-5 bg-gradient-info">1.4 ty</span>
                                 <span class="p-1 border border-secondary rounded ml-4 bg-gradient-info" >58m2</span>
-                                <ul class="d-flex mt-3 mb-1">
-                                    <li class="mr-3"><i class="fa-solid fa-book"></i> Nha chung cu</li>
-                                    <li class="mr-3"><i class="fa-solid fa-bed"></i> 2 </li>
-                                    <li class="mr-3"><i class="fa-solid fa-sink"></i> 2</li>
-                                </ul>
-                                <div class="content__address">
+                                <div class="content__address mt-3 mb-3">
                                     <i class="fa-solid fa-location-dot mr-1"></i>Mường Thanh Viễn Triều, P.Vĩnh Phước, Tp.Nha Trang, KH
                                 </div>
                             </div>
-
                         </div>
 
-                        <div class="col-md-2 mt-3   ">
-                            <div class="date text-center">
-                                11/11/2022
-                            </div>
-                            <div class="favorite__container__card__inner text-center mt-2">
-                                <img src="./assets/img/2.jpg" alt="" class="favorite__container__card__inner_avatar">
-                            </div>
-                            <div class="name text-center mt-1">
-                                Duan
-                            </div>
-                            <!-- <div class="text-right">
-                                <button class="btn btn-primary  ">
-                                    <i class="fa-solid fa-arrow-down-wide-short "></i>
-                                </button>
-                            </div> -->
-
+                        <div class="col-md-2 d-flex">
+                           <div class="buttonDiv">
+                            <button class="button__delete_favorite">
+                                Delete
+                            </button>
+                           </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mt-3">
-                    <div class="row">
-                        <div class="col-md-2">
-                            <img src="./assets/img/1.jpg" alt="" class="img-thumbnail">
-                        </div>
-                        <div class="col-md-8 ">
-                            <h6 >CĂN HỘ 2PN FULL NỘI THẤT XỊN MƯỜNG THANH VIỄN TRIỀU - 1.4 TỶ</h6>
-                            <div class="content__inner__card pt-3">
-                                <span class="p-1 border border-secondary rounded ml-5 bg-gradient-info">1.4 ty</span>
-                                <span class="p-1 border border-secondary rounded ml-4 bg-gradient-info" >58m2</span>
-                                <ul class="d-flex mt-3 mb-1">
-                                    <li class="mr-3"><i class="fa-solid fa-book"></i> Nha chung cu</li>
-                                    <li class="mr-3"><i class="fa-solid fa-bed"></i> 2 </li>
-                                    <li class="mr-3"><i class="fa-solid fa-sink"></i> 2</li>
-                                </ul>
-                                <div class="content__address">
-                                    <i class="fa-solid fa-location-dot mr-1"></i>Mường Thanh Viễn Triều, P.Vĩnh Phước, Tp.Nha Trang, KH
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="col-md-2 mt-3   ">
-                            <div class="date text-center">
-                                11/11/2022
-                            </div>
-                            <div class="favorite__container__card__inner text-center mt-2">
-                                <img src="./assets/img/2.jpg" alt="" class="favorite__container__card__inner_avatar">
-                            </div>
-                            <div class="name text-center mt-1">
-                                Duan
-                            </div>
-                            <!-- <div class="text-right">
-                                <button class="btn btn-primary  ">
-                                    <i class="fa-solid fa-arrow-down-wide-short "></i>
-                                </button>
-                            </div> -->
-
-                        </div>
-                    </div>
-                </div>
+                
+                
             </div>
         </div>
     </section>
-    <%- include('../layouts/footer') %>
 
   </body>
 </html>
