--- a/views/admin/viewApartment.ejs
+++ b/views/admin/viewApartment.ejs
@@ -1,47 +1,6 @@
 <div class="content__body ">
   <div class="row">
-    <div class="col-md-4">
-      <div class="card">
-        <div class="card-header bg-primary">
-          <h4>Đăng thông tin</h4>
-        </div>
-        <div class="card-body">
-          <form>
-            <div class="form-group">
-              <h5>Khu vực</h5>
-              <h6 for="">Vùng</h6>
-              <select class="form-control">
-                <option value="1">Bắc</option>
-                <option value="2">Trung</option>
-                <option value="3">Nam</option>
-              </select>
-              <input class="form-control" type="text" placeholder="Thành phố">
-              <input class="form-control" type="text" placeholder="Quận/Huyện">
-              <input class="form-control" type="text" placeholder="Phường xã">
-              <input class="form-control" type="text" placeholder="Số nhà">
-              <input class="form-control" type="text" placeholder="Bãi biển">
-            </div>
-            <div class="form-group">
-              <h6 for="">Thông tin mô tả</h6>
-              <textarea class="form-control" name="noi_dung" id="" cols="30" rows="5"></textarea>
-            </div>
-            <div class="form-group">
-              <h6 for="">Giá căn hộ</h6>
-              <input class="form-control" type="text">
-            </div>
-            <div class="form-group">
-              <h6 for="">Diện tích căn hộ</h6>
-              <input class="form-control" type="text">
-            </div>
-          </form>
-        </div>
-        <div class="card-footer ">
-          <button class="btn btn-primary "> Đăng tải</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-8">
+    <div class="col-md-12">
       <div class="card">
         <div class="card-header bg-primary">
           <h4>Quản lý đăng tin</h4>
@@ -51,25 +10,27 @@
             <thead>
               <tr>
                 <th class="text-center align-middle">STT</th>
-                <th class="text-center align-middle">Vùng</th>
-                <th class="text-center align-middle">Thông tin mô tả</th>
+                <th class="text-center align-middle">Miền</th>
+                <th class="text-center align-middle">Tên căn hộ</th>
                 <th class="text-center align-middle">Giá căn hộ</th>
                 <th class="text-center align-middle">Diện tích căn hộ</th>
                 <th class="text-center align-middle" class="col-span" colspan="2">Action</th>
               </tr>
             </thead>
-            <tbody>
-              <th class="text-center align-middle">1</th>
-              <td class="text-center align-middle">Trung </td>
-              <td class="text-center align-middle">rất đẹp</td>
-              <td class="text-center align-middle">5 toi</td>
-              <td class="text-center align-middle">2000m2</td>
-              <td class="text-center align-middle">
-                <button class="btn btn-primary edit" data-toggle="modal" data-target="#editModal">Edit
-              </td>
-              <td class="text-center align-middle"><button class="btn btn-danger" data-toggle="modal"
-                  data-target="#deleModal">Delete</button></td>
-            </tbody>
+            
+            <% renderApartment.forEach((apartment, index) => {%>
+              <tbody>
+                <th class="text-center align-middle"><%= index+1 %></th>
+                <td class="text-center align-middle"><%= apartment.region %></td>
+                <td class="text-center align-middle"><%= apartment.heading%></td>
+                <td class="text-center align-middle"><%= apartment.price %></td>
+                <td class="text-center align-middle"><%= apartment.acreage %></td>
+                <td class="text-center align-middle">
+                  <button class="btn btn-primary edit" data-toggle="modal" data-target="#editModal">Sửa</button>
+                  <a href="/dashboard/delete?id=<%= apartment._id %>" class="btn btn-danger">Xóa</a>
+                </td>
+              </tbody>
+            <% }) %>
           </table>
         </div>
       </div>
@@ -81,7 +42,7 @@
         <div class="modal-content">
           <div class="modal-header bg-primary text-center align-center">
             <h5 class="modal-title " id="exampleModalLabel">Edit upload</h5>
-            <button type="button" class="close " data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close bg-danger p-2" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -138,7 +99,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close bg-danger p-2" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -153,38 +114,6 @@
       </div>
     </div>
     <!-- Modal -->
-    <div class="modal fade" id="deleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header bg-primary">
-            <h5 class="modal-title" id="exampleModalLabel">Delete upload</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th class="text-center align-middle">STT</th>
-                  <th class="text-center align-middle">Khu vực</th>
-                  <th class="text-center align-middle">Giá</th>
-                </tr>
-              </thead>
-              <tbody>
-                <th class="text-center align-middle">1</th>
-                <td class="text-center align-middle">Bắc</td>
-                <td class="text-center align-middle">5 tỏi</td>
-              </tbody>
-            </table>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-danger">Delete</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    
   </div>
 </div>
