--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -105,6 +105,26 @@
                 />
               </div>
               <div class="form-group">
+                <h6 style="padding-top: 10px">Thu nhập hằng tháng</h6>
+                <input
+                  class="form-control"
+                  type="number"
+                  name="priceMonth"
+                  placeholder="Nhập giá thu nhập"
+                  id=""
+                />
+              </div>
+              <div class="form-group">
+                <h6 style="padding-top: 10px">Phần trăm đóng theo đợt</h6>
+                <input
+                  class="form-control"
+                  type="phần trăm"
+                  name="phase"
+                  placeholder="Phần trăm của đợt 1"
+                  id=""
+                />
+              </div>
+              <div class="form-group">
                 <h6 for="formFileMultiple" style="padding-top: 10px" >Chọn ảnh phòng</h6>
                 <input
                   class="form-control"
